Refactor project structure and update dependencies
- Restructured project files and removed deprecated components
- Updated webpack configuration for development and production builds
- Added new dependencies like react-router, react-quill, and heroicons
- Simplified context and store management
- Removed options page and consolidated settings
- Updated manifest and background script for better extension functionality

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,18 +6,16 @@
     "permissions": [
         "storage",
         "contextMenus",
-        "system.display"
+        "system.display",
+        "tabs", 
+        "activeTab"
     ],
     "background": {
         "service_worker": "background.js"
     },
-    "options_ui": {
-        "page": "options.html",
-        "open_in_tab": true
-    },
     "icons": {
-        "48": "icon.png",
-        "128": "icon.png"
+        "48": "/assets/icon.png",
+        "128": "/assets/icon128.png"
     },
     "content_scripts": [
         {
