--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
     "version": "1.0.0",
     "description": "A Chrome extension that provides AI-powered insights about selected text.",
     "scripts": {
-        "build": "webpack --mode production",
-        "dev": "webpack --mode development --watch",
-        "devwatch": "webpack --mode development --watch",
-        "start": "webpack serve --open"
+        "build": "webpack --mode development",
+        "build-prod": "webpack --mode production",
+        "start": "webpack serve --open --mode development"
     },
     "dependencies": {
         "@anthropic-ai/sdk": "^0.36.3",
+        "@heroicons/react": "^2.2.0",
         "@radix-ui/react-collapsible": "^1.1.2",
         "@radix-ui/react-dialog": "^1.1.5",
         "@radix-ui/react-icons": "^1.3.2",
         "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-popover": "^1.1.5",
+        "@radix-ui/react-scroll-area": "^1.2.2",
         "@radix-ui/react-select": "^2.1.5",
         "@radix-ui/react-slider": "^1.2.2",
         "@radix-ui/react-slot": "^1.1.1",
@@ -32,12 +33,17 @@
         "mobx-react": "^9.2.0",
         "openai": "^4.82.0",
         "prism-react-renderer": "^2.4.1",
+        "quill": "^2.0.0",
         "radix-ui": "^1.1.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hot-toast": "^2.5.1",
         "react-markdown": "^8.0.7",
         "react-markdown-editor-lite": "^1.3.4",
+        "react-quill": "^2.0.0",
         "react-redux": "^9.2.0",
+        "react-resizable-panels": "^2.1.7",
+        "react-router-dom": "^7.1.5",
         "react-syntax-highlighter": "^15.6.1",
         "remark-gfm": "^3.0.1",
         "tailwind-merge": "^2.6.0",
